--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <main id="maincontent">
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" role="application"></div>
     </section>
     <div>
       <div class="filter-options">
