media responisveness fix

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   </header>
 
   <main id="maincontent">
-    <section id="map-container">
+    <div id="map-container">
       <div id="map" role="application"></div>
-    </section>
+    </div>
     <div>
       <div class="filter-options">
         <label id="filter-results-label">Filter Results</label>
