--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div id="map" role="application"></div>
     </div>
     <div>
-      <div class="filter-options">
+      <div class="filter-options" tabindex="0">
         <label id="filter-results-label">Filter Results</label>
         <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
@@ -35,7 +35,7 @@
         </select>
       </div>
       <!-- grid -->
-      <ul id="restaurants-list"></ul>
+      <ul id="restaurants-list" tabindex="0"></ul>
     </div>
   </main>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
